traq-dev/backend/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-deployment
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - name: traq-backend
          image: ghcr.io/traptitech/traq:master@sha256:14545b0b04c370c54fc8808faccd1f728f19729c8bf8f1b3bead1f1b1bd4c7fd
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
