traq-dev/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: traq-dev-backend
  name: traq-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traq-dev-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: traq-dev-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traq:master@sha256:0cb501bf17238ad505b5c8010275ba8bf009ee87716363dad40b9e81c2db678c
          args: ["serve", "--pprof"]
          name: traq-dev-backend
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /keys
              name: keys
              readOnly: true
            - mountPath: /app/config.yml
              name: config-yml
              readOnly: true
              subPath: config.yml
      restartPolicy: Always
      volumes:
        - name: config-yml
          secret:
            secretName: traq-dev-backend-config-yml
        - name: keys
          secret:
            secretName: traq-dev-backend-secrets
